manifests/deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-app

spec:
  replicas: 1
  minReadySeconds: 15

  template:
      metadata:
          labels:
              app: node-app
      spec:
          volumes:
          containers:
          - image: nodeapp:v1
            imagePullPolicy: Never
            name: node
            ports:
                - containerPort: 80
