manifests/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 4000
  selector:
      app: node-app
