manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: node-service
          servicePort: 80
